# _fastapi_l9

./: Dockerfile  README.md  proccesing.py  pyproject.toml  requirements.txt
_fastapi_l9/db/: mongodb.py
app/config/: settings.py
srv/: main.py  mongodb.py  proccesing.py
srv/app/: routers.py
srv/app/config/: settings.py
tests/: test__fastapi_l9.py
